--- a/source/style/main.css
+++ b/source/style/main.css
@@ -939,6 +939,7 @@ body {
   font-weight: 900;
   color: #777777;
   font-size: 12px;
+  overflow: auto;
 }
 
 .header-daily__text {
@@ -973,10 +974,11 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 0.1em;
   list-style: none;
-  overflow: auto;
 }
 
 .header-daily__list__list {
@@ -1814,6 +1816,12 @@ body {
           flex-direction: row;
   padding: 0;
   list-style: none;
+}
+
+@media (max-width: 576px) {
+  .footer__list {
+    width: 50%;
+  }
 }
 
 .footer__item {
